mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
   matchLabels:
     app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
     containers:
     - name: mongodb
       image: mongo
       ports:
       - containerPort: 27017
---

#mongodb-service.yaml (in yaml we can mention many files in single file by using {---} )
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb  # selector is very imp to connect with pod (it can be done with label name under metadata on deployment file )
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
